# manim-metal

./: .gitignore  BENCHMARK.md  CLAUDE.md  README.md  benchmark.py  compare_metric.py  compare_video.py  demo_3b1b.py  demo_3d.py  demo_hologram.py  main.py  pyproject.toml  test_manim_ce_3d_compat.py  verify.py  video_scenes.py
src/manim_metal/: __init__.py  metal_camera.py  metal_context.py  native_encoder.py  patch.py  renderer.py  utils.py
src/manim_metal/native/: fast_encode.dylib  fast_encode.m
src/manim_metal/shaders/: blit.metal  fill.metal  fxaa.metal  lighting.h  stroke.metal
tests/: conftest.py  test_3d_basic.py  test_lighting_integration.py  test_normals.py  test_patch.py  test_render_basic.py  test_stress.py  test_uniforms.py
