[project]
name = "manim-metal"
version = "0.1.0"
description = "Metal renderer add-on for Manim Community Edition"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "manim>=0.20.0",
    "pyobjc-framework-metal>=11.0",
    "pyobjc-framework-quartz>=11.0",
    "pyobjc-framework-metalkit>=11.0",
    "mapbox-earcut>=2.0.0",
]

[project.entry-points."manim.plugins"]
manim_metal = "manim_metal"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/manim_metal"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
